--- a/Week 4/style.css
+++ b/Week 4/style.css
@@ -13,7 +13,7 @@ body {
     font-weight: 400;
     font-style: normal;
     /* color: #e5e5cb; */
-    color: #3c2a21;
+    color: #e4d5cd;
     font-size: 1.1rem;
   }
 
@@ -43,4 +43,4 @@ p {
     padding: 40px;
     Line-height: 120px;
     border: 4px solid coral;
-}
+} 
