--- a/style.css
+++ b/style.css
@@ -80,3 +80,21 @@ a:active {
     font-size: 2rem;
     font-weight: bold;
 }
+
+/* In crafting the design of the website, I opted for a simplistic approach 
+as an ode to the minimalist style evident in Myoungae Kim's own digital presence. 
+I sought to pay homage to the aesthetic of early websites from the late 80s and 
+early 90s, drawn to their raw and unembellished appeal. This choice allowed me 
+to immerse myself in the captivating essence of that era's web design, 
+capturing its unique charm and nostalgia.
+
+As a newcomer to coding and website development, my primary focus was on 
+establishing the architectural framework of the website and conducting a 
+thorough analysis of Kim's own digital platform. This foundational work laid 
+the groundwork for a cohesive and user-friendly browsing experience, 
+ensuring that visitors could seamlessly navigate and engage with the content. 
+
+While simplicity was paramount, I also aimed to infuse the website with 
+elements that reflected Kim's innovative spirit and artistic vision, 
+ultimately creating a digital space that pays tribute to both their work and 
+the evolving landscape of digital design. */
